--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -2,6 +2,7 @@
 <ngx-auth-firebaseui-login
     [providers]="[]"
     [registrationEnabled]="false"
+    [registrationEnabled]="false"
     [resetPasswordEnabled]="false"
     [titleText]="'Por favor ingrese su correo y clave de acceso'"
     [loginButtonText]="'Ingresar'"
@@ -10,7 +11,6 @@
     [emailErrorPatternText]="'Por favor informe una dirección válida de correo electrónico'"
     [passwordText]="'Clave de acceso'"
     [passwordErrorRequiredText]="'Por favor ingrese su clave de acceso'"
-    [messageOnAuthSuccess]="null"
     (onSuccess)="ingresar($event)"
->
+    (onError)="mostrarError($event)">
 </ngx-auth-firebaseui-login>
