quito ngx-auth-firebaseui

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,4 +1,5 @@
-<input type="button" value="Salir" (click)="salir()" *ngIf="estaLogueado()">
+<p>login works!</p>
+<!-- <input type="button" value="Salir" (click)="salir()" *ngIf="estaLogueado()">
 <ngx-auth-firebaseui-login
     [providers]="[]"
     [registrationEnabled]="false"
@@ -12,4 +13,4 @@
     [passwordText]="'Clave de acceso'"
     [passwordErrorRequiredText]="'Por favor ingrese su clave de acceso'"
     (onError)="mostrarError($event)">
-</ngx-auth-firebaseui-login>
+</ngx-auth-firebaseui-login> -->
