--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,4 +1,3 @@
-<p>login works!</p>
 <!-- <input type="button" value="Salir" (click)="salir()" *ngIf="estaLogueado()">
 <ngx-auth-firebaseui-login
     [providers]="[]"
@@ -14,3 +13,21 @@
     [passwordErrorRequiredText]="'Por favor ingrese su clave de acceso'"
     (onError)="mostrarError($event)">
 </ngx-auth-firebaseui-login> -->
+<form [formGroup]="loginForm" (ngSubmit)="ingresar()">
+    <div class="container">
+        <mat-form-field appearance="fill">
+          <mat-label>Correo electrónico</mat-label>
+          <input matInput placeholder="Ingrese su dirección de correo" [formControl]="loginForm.controls.correo">
+          <mat-error *ngIf="loginForm.controls.correo.invalid">{{ mostrarError('correo') }}</mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Clave de acceso</mat-label>
+            <input matInput [formControl]="loginForm.controls.clave" [type]="ocultaClave ? 'password' : 'text'">
+            <button mat-icon-button matSuffix (click)="ocultaClave = !ocultaClave" [attr.aria-label]="'Ocultar clave'" [attr.aria-pressed]="ocultaClave">
+                <mat-icon>{{ocultaClave ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="loginForm.controls.clave.invalid">{{ mostrarError('clave') }}</mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="primary" class="btnLogin">Ingresar</button>
+    </div>
+</form>
