--- a/src/app/paginas/ingreso/ingreso.component.html
+++ b/src/app/paginas/ingreso/ingreso.component.html
@@ -1,3 +1,4 @@
+<input type="button" value="Salir" (click)="salir()" *ngIf="estaLogueado()">
 <h2>Ingreso al Sistema</h2>
 <h4>Por favor ingrese sus credenciales</h4>
-<app-login [login]="usuario" (ingresarEvent)="ingresar()"></app-login>
+<app-login [login]="getUsuario()" (ingresarEvent)="ingresar()"></app-login>
