--- a/src/app/componentes/toolbar/toolbar.component.css
+++ b/src/app/componentes/toolbar/toolbar.component.css
@@ -8,6 +8,18 @@
     display: none;
 }
 
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+mat-label {
+  font-weight: bold;
+  background-color: wheat;
+}
+
 @media screen and (max-width: 600px) {
     .pc {
         display: none;
