menu con avatar

--- a/src/app/componentes/toolbar/toolbar.component.css
+++ b/src/app/componentes/toolbar/toolbar.component.css
@@ -15,9 +15,10 @@
   border-radius: 50%;
 }
 
-mat-label {
+.lblUsuario {
   font-weight: bold;
   background-color: wheat;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 600px) {
