--- a/src/app/componentes/toolbar/toolbar.component.html
+++ b/src/app/componentes/toolbar/toolbar.component.html
@@ -52,7 +52,7 @@
         </mat-menu>
 
         <mat-menu #menuUsuario="matMenu">
-            <mat-label mat-menu-item>{{ getNombre() }}</mat-label>
+            <mat-label class="lblUsuario" mat-menu-item>{{ getNombre() }}</mat-label>
 
             <mat-divider></mat-divider>
 
