--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -7,12 +7,12 @@
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>Clave de acceso</mat-label>
-            <input matInput [formControl]="loginForm.controls.clave" [type]="ocultaClave ? 'password' : 'text'">
-            <button mat-icon-button matSuffix (click)="ocultaClave = !ocultaClave" [attr.aria-label]="'Ocultar clave'" [attr.aria-pressed]="ocultaClave">
-                <mat-icon>{{ocultaClave ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
+            <input matInput [formControl]="loginForm.controls.clave" [type]="getOcultaClave() ? 'password' : 'text'">
+            <a mat-icon-button matSuffix (click)="setOcultaClave(!getOcultaClave())">
+                <mat-icon>{{getOcultaClave() ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </a>
             <mat-error *ngIf="loginForm.controls.clave.invalid">{{ mostrarError('clave') }}</mat-error>
         </mat-form-field>
-        <button mat-raised-button color="primary" class="btnLogin">Ingresar</button>
+        <button type="submit" mat-raised-button color="primary" class="btnLogin">Ingresar</button>
     </div>
 </form>
