--- a/src/app/componentes/toolbar/toolbar.component.html
+++ b/src/app/componentes/toolbar/toolbar.component.html
@@ -9,7 +9,7 @@
     <span class="example-fill-remaining-space"></span>
 
     <div class="pc">
-        <button mat-stroked-button *ngIf="!usuarioLogueado()" [routerLink]="['/login']">Ingresar</button>
+        <button mat-stroked-button *ngIf="!usuarioLogueado()" [routerLink]="['/ingreso']">Ingresar</button>
         <button mat-stroked-button *ngIf="!usuarioLogueado()" [routerLink]="['/registro/'.concat(getTipoCliente().toString())]">Registrarse</button>
     </div>
 
@@ -19,7 +19,7 @@
         </button>
 
         <mat-menu #menuInicio="matMenu">
-            <button mat-menu-item [routerLink]="['/login']">
+            <button mat-menu-item [routerLink]="['/ingreso']">
                 <span>Ingresar</span>
             </button>
 
