--- a/src/app/paginas/registro/registro.component.html
+++ b/src/app/paginas/registro/registro.component.html
@@ -1,3 +1,4 @@
 <h2>Registro</h2>
-<h4>Por favor ingrese sus datos</h4>
-<app-signup [usuario]="getUsuario()" [tipo]="getTipo()" (claveEvent)="setClave($event)" (fotoEvent)="setFoto($event)" (registrarEvent)="registrar()"></app-signup>
+<h4 *ngIf="!usuarioLogueado()">Por favor ingrese sus datos</h4>
+<h4 *ngIf="usuarioLogueado()">Por favor ingrese los datos del usuario</h4>
+<app-signup [usuario]="getUsuario()" [tipo]="getTipo()" [muestraCaptcha]="!usuarioLogueado()" (claveEvent)="setClave($event)" (fotoEvent)="setFoto($event)" (registrarEvent)="registrar()"></app-signup>
