--- a/src/app/componentes/signup/signup.component.html
+++ b/src/app/componentes/signup/signup.component.html
@@ -31,6 +31,13 @@
             <mat-label>Teléfono de contacto</mat-label>
             <input type="text" matInput placeholder="Ingrese un teléfono de contacto" [formControl]="signupForm.controls.telefono">
         </mat-form-field>
+        <mat-form-field *ngIf="esEspecialista()" appearance="fill">
+            <mat-label>Especialidad</mat-label>
+            <mat-select [formControl]="signupForm.controls.especialidad">
+                <mat-option *ngFor="let esp of enumEsp" [value]="esp">{{ esp }}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="signupForm.controls.especialidad.invalid">{{ mostrarError('especialidad') }}</mat-error>
+        </mat-form-field>
         <div class="fldArchivo">
             <mat-label>Foto de perfil</mat-label>
             <br>
