--- a/src/app/componentes/toolbar/toolbar.component.html
+++ b/src/app/componentes/toolbar/toolbar.component.html
@@ -47,6 +47,12 @@
                 <span>Alta Cliente</span>
             </button>
 
+            <mat-divider *ngIf="usuarioLogueado() && getTipoUsuario() === getTipoAdmin()"></mat-divider>
+
+            <button mat-menu-item *ngIf="usuarioLogueado() && getTipoUsuario() === getTipoAdmin()" (click)="navegar('dias')">
+                <span>Horarios</span>
+            </button>
+
             <mat-divider></mat-divider>
 
             <button mat-menu-item (click)="salir()">
