--- a/src/app/paginas/dias/dias.component.html
+++ b/src/app/paginas/dias/dias.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="getHorario()" class="mat-elevation-z8">
+<table mat-table [dataSource]="getDias()" class="mat-elevation-z8">
   <ng-container matColumnDef="dia">
     <th mat-header-cell *matHeaderCellDef> Día </th>
     <td mat-cell *matCellDef="let unDia"> {{ unDia.dia }} </td>
