--- a/src/app/paginas/horarios/horarios.component.css
+++ b/src/app/paginas/horarios/horarios.component.css
@@ -9,3 +9,8 @@ th.mat-sort-header-sorted {
 .mat-sort-header-container {
   align-items: center;
 }
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
