--- a/src/app/paginas/horarios/horarios.component.html
+++ b/src/app/paginas/horarios/horarios.component.html
@@ -1,5 +1,6 @@
 <mat-form-field>
   <mat-label>Filtro</mat-label>
+  <mat-icon matPrefix>search</mat-icon>
   <input matInput (keyup)="applyFilter($event)" placeholder="Ingrese aquí la frase o palabra a buscar">
 </mat-form-field>
 
