--- a/src/app/componentes/toolbar/toolbar.component.html
+++ b/src/app/componentes/toolbar/toolbar.component.html
@@ -61,6 +61,10 @@
                 <span>Horarios</span>
             </button>
 
+            <button mat-menu-item *ngIf="usuarioLogueado() && getTipoUsuario() === getTipoAdmin()" (click)="navegar('turnos')">
+                <span>Turnos</span>
+            </button>
+
             <mat-divider></mat-divider>
 
             <button mat-menu-item (click)="salir()">
