--- a/src/app/componentes/turno/turno.component.html
+++ b/src/app/componentes/turno/turno.component.html
@@ -9,7 +9,7 @@
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>Fecha</mat-label>
-            <input matInput [matDatepicker]="picker" [matDatepickerFilter]="filtroFecha" [formControl]="turnoForm.controls.fecha" readonly>
+            <input matInput [matDatepicker]="picker" [matDatepickerFilter]="filtroFecha" [formControl]="turnoForm.controls.fecha" readonly (dateChange)="setTurnosDisponibles($event)">
             <mat-datepicker-toggle matSuffix [for]="picker">
                 <mat-icon matDatepickerToggleIcon>arrow_drop_down</mat-icon>
             </mat-datepicker-toggle>
@@ -34,3 +34,39 @@
         <button type="button" mat-raised-button (click)="cerrar()">Cancelar</button>
     </div>
 </form>
+<mat-form-field>
+  <mat-label>Filtro</mat-label>
+  <mat-icon matPrefix>search</mat-icon>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ingrese aquí la frase o palabra a buscar">
+</mat-form-field>
+
+<table mat-table [dataSource]="datos" matSort matSortDisableClear class="mat-elevation-z8">
+  <ng-container matColumnDef="especialista">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Especialista </th>
+    <td mat-cell *matCellDef="let unTurno"> {{ getColEspecialista(unTurno.especialista) }} </td>
+  </ng-container>
+  <ng-container matColumnDef="especialidad">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Especialidad </th>
+    <td mat-cell *matCellDef="let unTurno"> {{ getColEspecialidad(unTurno.especialista) }} </td>
+  </ng-container>
+  <ng-container matColumnDef="consultorio">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Consultorio </th>
+    <td mat-cell *matCellDef="let unTurno"> {{ getColConsultorio(unTurno.consultorio) }} </td>
+  </ng-container>
+  <ng-container matColumnDef="fecha">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+    <td mat-cell *matCellDef="let unTurno"> {{ unTurno.fecha | date:'dd/MM/yyyy' }} </td>
+  </ng-container>
+  <ng-container matColumnDef="hora">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Hora </th>
+    <td mat-cell *matCellDef="let unTurno"> {{ unTurno.hora | numHora }} </td>
+  </ng-container>
+  <ng-container matColumnDef="estado">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
+    <td mat-cell *matCellDef="let unTurno"> {{ unTurno.estado }} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
+</table>
+<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
