--- a/src/app/componentes/turno/turno.component.html
+++ b/src/app/componentes/turno/turno.component.html
@@ -16,20 +16,21 @@
             <mat-datepicker touchUi #picker></mat-datepicker>
             <mat-error *ngIf="turnoForm.controls.fecha.invalid">{{ mostrarError('fecha') }}</mat-error>
         </mat-form-field>
-        <!-- <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill">
             <mat-label>Especialista</mat-label>
-            <mat-select [formControl]="turnoForm.controls.especialista">
-                <mat-option *ngFor="let unEsp of especialistas" [value]="unEsp.displayName">{{ unEsp.displayName }}</mat-option>
-            </mat-select>
+            <input matInput [formControl]="turnoForm.controls.especialista" readonly>
             <mat-error *ngIf="turnoForm.controls.especialista.invalid">{{ mostrarError('especialista') }}</mat-error>
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>Consultorio</mat-label>
-            <mat-select [formControl]="turnoForm.controls.consultorio">
-                <mat-option *ngFor="let unCons of consultorios" [value]="unCons.numero">{{ unCons.numero }}</mat-option>
-            </mat-select>
+            <input matInput [formControl]="turnoForm.controls.consultorio" readonly>
             <mat-error *ngIf="turnoForm.controls.consultorio.invalid">{{ mostrarError('consultorio') }}</mat-error>
-        </mat-form-field> -->
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Hora</mat-label>
+            <input matInput [formControl]="turnoForm.controls.hora" [value]="turnoForm.controls.hora.value | numHora" readonly>
+            <mat-error *ngIf="turnoForm.controls.hora.invalid">{{ mostrarError('hora') }}</mat-error>
+        </mat-form-field>
         <button type="submit" mat-raised-button color="primary">Guardar</button>
         <button type="button" mat-raised-button (click)="cerrar()">Cancelar</button>
     </div>
@@ -61,12 +62,8 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Hora </th>
     <td mat-cell *matCellDef="let unTurno"> {{ unTurno.hora | numHora }} </td>
   </ng-container>
-  <ng-container matColumnDef="estado">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
-    <td mat-cell *matCellDef="let unTurno"> {{ unTurno.estado }} </td>
-  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnas"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnas;" (click)="editarFila(row)"></tr>
 </table>
 <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
