--- a/src/app/paginas/turnos/turnos.component.html
+++ b/src/app/paginas/turnos/turnos.component.html
@@ -23,7 +23,7 @@
   </ng-container>
   <ng-container matColumnDef="fecha">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
-    <td mat-cell *matCellDef="let unTurno"> {{ unTurno.fecha }} </td>
+    <td mat-cell *matCellDef="let unTurno"> {{ unTurno.fecha.toDate() | date:'dd/MM/yyyy' }} </td>
   </ng-container>
   <ng-container matColumnDef="hora">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Hora </th>
@@ -35,16 +35,13 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnas"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnas;" (click)="editarFila(row)"></tr>
+  <!-- <tr mat-row *matRowDef="let row; columns: columnas;" (click)="editarFila(row)"></tr> -->
+  <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
 </table>
 <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
 <button type="button" *ngIf="!muestraDetalle" mat-raised-button color="primary" (click)="editarFila(null)">Nuevo Turno</button>
 
 <app-turno *ngIf="muestraDetalle"
-  [turno]="fila"
-  [consultorio]="getConsultorio(fila.consultorio)"
-  [especialista]="getEspecialista(fila.especialista)"
-  [cliente]="getCliente(fila.cliente)"
   [consultorios]="getConsultorios()"
   [especialistas]="getEspecialistas()"
   [clientes]="getClientes()"
