--- a/src/app/paginas/turnos/turnos.component.html
+++ b/src/app/paginas/turnos/turnos.component.html
@@ -46,6 +46,7 @@
   [especialistas]="getEspecialistas()"
   [clientes]="getClientes()"
   [horarios]="getHorarios()"
+  [turnos]="getTurnos()"
   (cerrarEvent)="cerrarDetalle()"
   (errorEvent)="mostrarError($event)"
   (guardarEvent)="guardar($event)">
