botones de login

--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -16,3 +16,12 @@
         <button type="submit" mat-raised-button color="primary" class="btnLogin">Ingresar</button>
     </div>
 </form>
+<button mat-raised-button color="accent" (click)="cargarUsuario('admin')">ADMIN</button>
+<button mat-raised-button color="accent" (click)="cargarUsuario('recep')">Recepcionista 1</button>
+<button mat-raised-button color="accent" (click)="cargarUsuario('recep2')">Recepcionista 2</button>
+<button mat-raised-button color="accent" (click)="cargarUsuario('pepe')">Cliente 1</button>
+<button mat-raised-button color="accent" (click)="cargarUsuario('ruben')">Cliente 2</button>
+<button mat-raised-button color="accent" (click)="cargarUsuario('esp1')">Especialista 1</button>
+<button mat-raised-button color="accent" (click)="cargarUsuario('esp2')">Especialista 2</button>
+<button mat-raised-button color="accent" (click)="cargarUsuario('esp3')">Especialista 3</button>
+<button mat-raised-button color="accent" (click)="cargarUsuario('esp4')">Especialista 4</button>
