--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -14,6 +14,10 @@ mat-form-field {
   box-sizing: border-box;
 }
 
+button {
+  margin-right: 8px;
+}
+
 .btnLogin {
   padding: 14px 20px;
   margin: 8px 0;
@@ -22,10 +26,17 @@ mat-form-field {
   width: 100%;
 }
 
-.btnLogin:hover {
+button:hover {
   opacity: 0.8;
 }
 
 .container {
   padding: 16px;
+}
+
+@media screen and (max-width: 600px) {
+  button {
+    margin: 2%;
+    width: 96%;
+  }
 }
